@startuml
enum PopperColor {
    None= 0,
    Purple= 1,
    Blue= 2,
    Yellow= 3,
}
class LevelDefinition {
    + levelIndex : int
    + width : int
    + height : int
    + maxTaps : int
}
ScriptableObject <|-- LevelDefinition
class AudioManager {
    - Awake() : void
    + PlayBackgroundMusic() : void
    + PlayPop() : void
    + PlayLevelComplete() : void
    + PlayLevelFailed() : void
}
MonoBehaviour <|-- AudioManager
AudioManager --> "Instance" AudioManager
AudioManager --> "musicSource" AudioSource
AudioManager --> "sfxSource" AudioSource
AudioManager --> "backgroundMusic" AudioClip
AudioManager --> "popClip" AudioClip
AudioManager --> "winClip" AudioClip
AudioManager --> "loseClip" AudioClip
class BoardManager {
    - cellSize : float = 1.0f
    - width : int
    - height : int
    - aliveCount : int
    + BuildBoard(level:LevelDefinition) : void
    + ClearBoard() : void
    + NotifyPopperExploded(popper:Poppers) : void
    + AllPoppersCleared() : bool
    + GetPopperAt(x:int, y:int) : Poppers
    + SpawnExplosionProjectiles(gridX:int, gridY:int, origin:Transform) : void
}
MonoBehaviour <|-- BoardManager
BoardManager --> "popperPrefab" Poppers
BoardManager o-> "boardOrigin" Vector2
class GameManager {
    - activeProjectiles : int = 0
    - waitingForChainReaction : bool = false
    - loseCheckRunning : bool = false
    + CurrentLevelIndex : int <<get>> = 0
    + RemainingTaps : int <<get>>
    - levelFinished : bool
    - Awake() : void
    + RegisterProjectile() : void
    + UnregisterProjectile() : void
    - Start() : void
    + LoadLevel(index:int) : void
    + TryUseTap() : bool
    - CheckLoseAfterDelay() : IEnumerator
    + OnBoardCleared() : void
    + OnNoMovesLeft() : void
    + RestartLevel() : void
    + LoadNextLevel() : void
    + StartChainReaction() : void
    - CheckEndOfChain() : IEnumerator
}
MonoBehaviour <|-- GameManager
GameManager --> "Instance" GameManager
GameManager --> "boardManager" BoardManager
GameManager --> "uiController" UIController
GameManager --> "currentLevel" LevelDefinition
class UIController {
    - Awake() : void
    + UpdateTapCount(taps:int) : void
    + UpdateLevelLabel(levelNumber:int) : void
    + ShowWinPanel() : void
    + ShowLosePanel() : void
    - OnNextLevelClicked() : void
    - OnRestartClicked() : void
    - OnQuitClicked() : void
}
MonoBehaviour <|-- UIController
UIController --> "tapCountText" TextMeshProUGUI
UIController --> "levelLabelText" TextMeshProUGUI
UIController --> "messageText" TextMeshProUGUI
UIController --> "winPanel" GameObject
UIController --> "losePanel" GameObject
UIController --> "hudPanel" GameObject
UIController --> "nextLevelButton" Button
UIController --> "restartButtonOnWin" Button
UIController --> "restartButtonOnLose" Button
UIController --> "quitButton" Button
UIController --> "quitLossButton" Button
class Poppers {
    - gridX : int
    - gridY : int
    - hitsRemaining : int
    - isExploded : bool = false
    + Initialize(board:BoardManager, x:int, y:int, color:PopperColor) : void
    - Awake() : void
    - OnMouseDown() : void
    + HitByProjectile() : void
    - Hit() : void
    - Explode() : void
}
MonoBehaviour <|-- Poppers
Poppers --> "view" PopperView
Poppers --> "projectilePrefab" Projectile
Poppers --> "board" BoardManager
Poppers --> "color" PopperColor
Poppers --> "col" Collider2D
class PopperView {
    - explosionDuration : float = 0.25f
    - Awake() : void
    - CreateEyes() : void
    + SetColor(color:PopperColor) : void
    + PlayExplosionPuff(onComplete:System.Action) : void
    - ExplosionRoutine(onComplete:System.Action) : System.Collections.IEnumerator
}
MonoBehaviour <|-- PopperView
PopperView --> "bodyRenderer" SpriteRenderer
PopperView --> "purpleSprite" Sprite
PopperView --> "blueSprite" Sprite
PopperView --> "yellowSprite" Sprite
PopperView --> "leftEyeSprite" Sprite
PopperView --> "rightEyeSprite" Sprite
PopperView --> "leftEyeLocalPos" Vector2
PopperView --> "rightEyeLocalPos" Vector2
PopperView --> "explosionRenderer" SpriteRenderer
PopperView --> "explosionSprite" Sprite
PopperView --> "leftEyeGO" GameObject
PopperView --> "rightEyeGO" GameObject
class Projectile {
    - speed : float = 5f
    + Initialize(dir:Vector2) : void
    - Update() : void
    - OnTriggerEnter2D(other:Collider2D) : void
    - Release() : void
}
MonoBehaviour <|-- Projectile
Projectile --> "direction" Vector2
class ProjectilePool {
    - initialSize : int = 20
    - Awake() : void
    - CreateNewProjectile() : Projectile
    + SpawnProjectile(position:Vector3, direction:Vector2) : Projectile
    + ReleaseProjectile(proj:Projectile) : void
}
class "Queue`1"<T> {
}
MonoBehaviour <|-- ProjectilePool
ProjectilePool --> "Instance" ProjectilePool
ProjectilePool --> "projectilePrefab" Projectile
ProjectilePool o-> "pool<Projectile>" "Queue`1"
@enduml
